# CodeMatrix

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  git.rs  lib.rs  main.rs  persistence.rs  plans.rs  pty.rs  remote.rs  tasks.rs  validate.rs
src/arena/: ArenaOverlay.tsx  BattleScreen.tsx  CommitDialog.tsx  ConfigScreen.tsx  CountdownScreen.tsx  HistoryScreen.tsx  ResultsScreen.tsx  merge.ts  persistence.ts  store.ts
src/components/: AgentSelector.tsx  BranchPrefixField.tsx  ChangedFilesList.tsx  CloseTaskDialog.tsx  ConfirmDialog.tsx  ConnectPhoneModal.tsx  CustomAgentEditor.tsx  Dialog.tsx  DiffViewerDialog.tsx  EditProjectDialog.tsx  EditableText.tsx  HelpDialog.tsx  IconButton.tsx  InfoBar.tsx  MergeDialog.tsx  MonacoDiffEditor.tsx  NewTaskDialog.tsx  NewTaskPlaceholder.tsx  ProjectSelect.tsx  PromptInput.tsx  PushDialog.tsx  ResizablePanel.tsx  ScalablePanel.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarFooter.tsx  StatusDot.tsx  SymlinkDirPicker.tsx  TaskPanel.tsx  TerminalPanel.tsx  TerminalView.tsx  TilingLayout.tsx  WindowResizeHandles.tsx  WindowTitleBar.tsx
src/lib/: channels.ts  dialog.ts  focus-restore.ts  focus-trap.ts  ipc.ts  look.ts  monaco-theme.ts  shell.ts  theme.ts  window.ts
src/remote/: AgentDetail.tsx  AgentList.tsx  App.tsx  auth.ts  index.html  index.tsx  (+3 more)
(+16 files in other folders)
