[package]
name = "code-matrix"
version = "0.1.0"
description = "CodeMatrix — run multiple AI coding agents side by side"
authors = ["Johannes Millan <contact@super-productivity.com>"]
edition = "2021"

[lib]
name = "code_matrix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
which = "7"
notify = "7"
notify-debouncer-mini = "0.5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["fs", "cors"] }
ring = "0.17"
dirs = "6"
slug = "0.1"
log = "0.4"
env_logger = "0.11"
window-vibrancy = "0.5"
